--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    font-family: 'Raleway', sans-serif;
+    font-family:sans-serif;
     font-size: 1.6rem;
     line-height: 1.2;
 }
@@ -26,6 +26,23 @@ h2 {
 
 p {
     font-size: 2rem;
+}
+
+.header-principal {
+    font-family:calibri;
+    font-size: 1.5rem;
+    line-height: 1.2;
+}
+
+.nav-principal {
+    font-family:calibri;
+    font-size: 1.0rem;
+    line-height: 1.2;
+}
+.ul-principal {
+    font-family:calibri;
+    font-size: 0.5rem;
+    line-height: 1.2;
 }
 
 .contenedor {
