--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,8 @@ html {
     font-size: 62.5%;
 }
 
-* {
-    box-sizing: border-box;
-}
-
 body {
-    font-family:sans-serif;
+    font-family:Calibri;
     font-size: 1.6rem;
     line-height: 1.2;
 }
@@ -24,23 +20,27 @@ h2 {
     font-size: 3.2rem;
 }
 
+h3 {
+    font-size: 2.6rem;
+}
+
 p {
     font-size: 2rem;
 }
 
 .header-principal {
-    font-family:calibri;
-    font-size: 1.5rem;
-    line-height: 1.2;
+    font-family:tahoma;
 }
 
+.section-principal {
+    font-size: 1.0rem;
+    line-height: 1.2;
+}
 .nav-principal {
-    font-family:calibri;
     font-size: 1.0rem;
     line-height: 1.2;
 }
 .ul-principal {
-    font-family:calibri;
     font-size: 0.5rem;
     line-height: 1.2;
 }
