--- a/css/styles.css
+++ b/css/styles.css
@@ -1,118 +1,142 @@
 html {
-    line-height: 1.0;
+  line-height: 1;
 }
 
 body {
-    font-family:calibri;
+  font-family: calibri;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
-h1{
-    font-size: 2.5rem;
+h1 {
+  font-size: 2.5rem;
 }
 
 h2 {
-    font-size: 2.3rem;
+  font-size: 2.3rem;
 }
 
 h3 {
-    font-size: 2.1rem;
+  font-size: 2.1rem;
 }
 
 p {
-    font-size: 1.9rem;
+  font-size: 1.9rem;
 }
- 
+
 .exampleMedia {
-    padding: 20px;
-    color: white;
-    }
+  padding: 20px;
+  color: white;
+}
 
 .header-principal {
-    font-family:tahoma;
-    background-color:aqua;
+  font-family: tahoma;
+  background-color: aqua;
 }
 
 .section-principal {
-    font-size: 1.7rem;
-    background-color:bisque;
+  font-size: 1.7rem;
+  background-color: bisque;
 }
 
 .nav-principal {
-    font-size: 1.5rem;
-    background-color:brown;
+  font-size: 1.5rem;
+  background-color: brown;
 }
 
 .ul-principal {
-    font-size: 1.3rem;
-    background-color:blueviolet;
+  font-size: 1.3rem;
+  background-color: blueviolet;
 }
 
 .contenedor {
-    max-width: 1200px;
-    width: 95%;
-    margin: 1 auto;
+  max-width: 1200px;
+  width: 95%;
+  margin: 1 auto;
 }
 
 .entrada-blog {
-    display: inline-block;
-    background-color:blue;
-    color: white;
+  display: inline-block;
+  background-color: blue;
+  color: white;
 }
 
 .grid-container {
-    width: 800px;
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 10px;
-    background-color:blueviolet;
-    padding: 10px;
-    }
-
-@media (min-width: 768px) {
-    .contenedor-flex {
-        display: flex;
-        justify-content: space-between;
-    }
-    .contenido-principal {
-        flex-basis: calc(60% - 1rem);
-    }
-    .sidebar {
-        flex-basis: calc(20% - 1rem);
-    }
-    /*calc() hace un cálculo matemático*/
-    /*Ocupa el 60% y el 20% del contenedor respectivamente - 1 rem para dar espacio entre columnas*/
+  width: 800px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  background-color: blueviolet;
+  padding: 10px;
 }
 
-/* Extra */ 
-    /* Small devices (600px and down) */
+@media (min-width: 768px) {
+  .contenedor-flex {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contenido-principal {
+    flex-basis: calc(60% - 1rem);
+  }
+  .sidebar {
+    flex-basis: calc(20% - 1rem);
+  }
+  /*calc() hace un cálculo matemático*/
+  /*Ocupa el 60% y el 20% del contenedor respectivamente - 1 rem para dar espacio entre columnas*/
+}
+
+.containerHF {
+  background:steelblue;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+}
+
+.itemCHF {
+  font-family: tahoma;
+  background:green;
+}
+
+
+
+/* Extra */
+/* Small devices (600px and down) */
 @media only screen and (max-width: 600px) {
-    .exampleMedia {background: red;}
-    }
-    /* Small devices (600px and up) */
-    @media only screen and (min-width: 600px) {
-    .exampleMedia {background: green;}
-    }
-    /* Medium devices (768px and up) */
-    @media only screen and (min-width: 768px) {
-    .exampleMedia {background: blue;}
-    }
-    /* Large devices (992px and up) */
-    @media only screen and (min-width: 992px) {
-    .exampleMedia {background: orange;}
-    }
-    /* Extra large devices (1200px and up) */
-    @media only screen and (min-width: 1200px) {
-    .exampleMedia {background: pink;}
-    }
+  .exampleMedia {
+    background: red;
+  }
+}
+/* Small devices (600px and up) */
+@media only screen and (min-width: 600px) {
+  .exampleMedia {
+    background: green;
+  }
+}
+/* Medium devices (768px and up) */
+@media only screen and (min-width: 768px) {
+  .exampleMedia {
+    background: blue;
+  }
+}
+/* Large devices (992px and up) */
+@media only screen and (min-width: 992px) {
+  .exampleMedia {
+    background: orange;
+  }
+}
+/* Extra large devices (1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .exampleMedia {
+    background: pink;
+  }
+}
 
 .contacto {
-    color:aquamarine
-    }
- 
+  color: aquamarine;
+}
+
 .footer-principal {
-    font-family:'Courier New', Courier, monospace
+  font-family: "Courier New", Courier, monospace;
 }
