--- a/style/productos.css
+++ b/style/productos.css
@@ -20,18 +20,18 @@
   /* Flex */
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap:wrap;
 }
 
 .Producto img {
- /* border-radius: 50%;
+  border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   width: 30%;
-  height: auto;
-  padding: 0 10px;*/
+  height: 30%;
+  padding: 0 10px;
   border: 1px solid rgb(200, 240, 240);
 }
 
