--- a/style/productos.css
+++ b/style/productos.css
@@ -29,10 +29,11 @@
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  width:fit-content;
-  height:fit-content;
   padding: 0 10px;
   border: 1px solid rgb(200, 240, 240);
+  width:min-content;
+  height:min-content;
+  box-sizing:border-box;
 }
 
 .Producto h4 {
