--- a/style/productos.css
+++ b/style/productos.css
@@ -31,8 +31,8 @@
   -o-border-radius: 50%;
   padding: 0 10px;
   border: 1px solid rgb(200, 240, 240);
-  width:33%;
-  height:25%;
+  width:10rem;
+  height:10rem;
 }
 
 .Producto h4 {
